--- a/netflix/src/app/style/herosection.module.css
+++ b/netflix/src/app/style/herosection.module.css
@@ -52,23 +52,24 @@
 }
 
 /*waves effect */
-.custom-shape-divider-bottom-1681647578 {
+.customShape {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   overflow: hidden;
   line-height: 0;
+  transform: rotate(180deg);
 }
 
-.custom-shape-divider-bottom-1681647578 svg {
+.customShape svg {
   position: relative;
   display: block;
-  width: calc(100% + 1.3px);
-  height: 150px;
+  width: calc(115% + 1.3px);
+  height: 100px;
 }
 
-.custom-shape-divider-bottom-1681647578 .shape-fill {
+.customShape .shapeFill {
   fill: #ffffff;
 }
 
